--- a/chatbot/src/Styling/Chatbot.css
+++ b/chatbot/src/Styling/Chatbot.css
@@ -1,14 +1,15 @@
 /* Hovedcontainer */
+
 .chat-container {
-  width: 400px;
-  margin: 20px auto;
+  width: 700px;
+  margin: auto;
   border: 1px solid #ddd;
   border-radius: 10px;
   background-color: white;
   box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
   display: flex;
   flex-direction: column;
-  overflow: hidden;
+  overflow: auto;
 }
 
 /* Header med logo og dato */
@@ -33,7 +34,8 @@
   height: 50vh;
   overflow-y: auto;
   padding: 15px;
-  display: flex;
+  margin: 10%;
+  display: center;
   flex-direction: column;
 }
 
@@ -101,15 +103,14 @@
 
 .chat-input input {
   flex-grow: 1;
-  padding: 10px;
+  padding: 12px 20px;
   border: 1px solid #ccc;
-  border-radius: 20px;
+  border-radius: 25px;
   font-size: 14px;
-  padding-right: 40px; /* Gir plass til send-knappen */
 }
 
 .chat-input button {
-  background: #f5a282;
+  background: #df5823;
   border: none;
   width: 35px;
   height: 35px;
