--- a/chatbot/src/Styling/Chatbot.css
+++ b/chatbot/src/Styling/Chatbot.css
@@ -1,15 +1,14 @@
 /* Hovedcontainer */
-
 .chat-container {
-  width: 700px;
-  margin: auto;
+  width: 400px;
+  margin: 20px auto;
   border: 1px solid #ddd;
   border-radius: 10px;
   background-color: white;
   box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
   display: flex;
   flex-direction: column;
-  overflow: auto;
+  overflow: hidden;
 }
 
 /* Header med logo og dato */
@@ -34,8 +33,7 @@
   height: 50vh;
   overflow-y: auto;
   padding: 15px;
-  margin: 10%;
-  display: center;
+  display: flex;
   flex-direction: column;
 }
 
@@ -103,14 +101,15 @@
 
 .chat-input input {
   flex-grow: 1;
-  padding: 12px 20px;
+  padding: 10px;
   border: 1px solid #ccc;
-  border-radius: 25px;
+  border-radius: 20px;
   font-size: 14px;
+  padding-right: 40px; /* Gir plass til send-knappen */
 }
 
 .chat-input button {
-  background: #df5823;
+  background: #f5a282;
   border: none;
   width: 35px;
   height: 35px;
