--- a/chatbot/src/styles/Chatbot.css
+++ b/chatbot/src/styles/Chatbot.css
@@ -164,6 +164,7 @@
   justify-content: center;
 }
 
+
 .consent-buttons{
   display: flex; /* Bruker flex */
   justify-content: center; /* Sentrerer knappene horisontalt */
@@ -196,6 +197,7 @@
   width: 35px;
   height: 35px;
   border-radius: 50%;
+  margin-left: 2px;
 }
 /* Bot-meldinger */
 .chat-message.bot {
