--- a/chatbot/src/styles/Chatbot.css
+++ b/chatbot/src/styles/Chatbot.css
@@ -111,6 +111,7 @@
   background: linear-gradient(to bottom, #ff5100 0%, #ff5100 80%);
   border-bottom-left-radius: 15px;
 }
+
 .chat-bubble.user::after {
   right: -10px;
   width: 10px;
@@ -212,7 +213,7 @@
   border-radius: 15px;
   width: 30px;
   align-self: flex-start;
-  margin-bottom: 5%;
+  margin-bottom: 5px;
 }
 
 .typing-bubble span {
