--- a/chatbot/src/styles/Chatbot.css
+++ b/chatbot/src/styles/Chatbot.css
@@ -145,6 +145,7 @@
 .chat-input button {
   background: #ff5100;
   border: none;
+  margin-right: 1%;
   width: 35px;
   height: 35px;
   border-radius: 50%;
