--- a/chatbot/src/styles/Chatbot.css
+++ b/chatbot/src/styles/Chatbot.css
@@ -194,7 +194,7 @@
   width: 35px;
   height: 35px;
   border-radius: 50%;
-  margin-left: 2px;
+  margin-left: 2%;
 }
 /* Bot-meldinger */
 .chat-message.bot {
